--- a/index.html
+++ b/index.html
@@ -11,79 +11,85 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="item-container">
-            <div class="img-container">
-                <img src="./images/session1.jpg" alt="Event image">
-            </div>
-
-            <div class="body-container">
-                <div class="overlay"></div>
-
-                <div class="event-info">
-                    <p class="title">Talk Show</p>
-                    <div class="separator"></div>
-                    <p class="info">VIT Bhopal, Madhey Pradesh</p>
-                    <p class="price">Rs 75</p>
-
-                    <div class="additional-info">
-                        <p class="info">
-                            <i class="fas fa-map-marker-alt"></i>
-                            Auditorium, VIT Bhopal
-                        </p>
-                        <p class="info">
-                            <i class="far fa-calendar-alt"></i>
-                            27 April 2023, 11:00 AM - 1:00 PM
-                        </p>
-
-                        <p class="info-description">
-                            A sit-down interactive dialogue session with <b>Smith Gonslaves</b>, a renowned AI-based
-                            Cyber
-                            Security expert with prior entrepreneurial experience with his own company CYBERSMITHSECURE
-                            PRIVATE
-                            LIMITED.
-                        </p>
-
-                    </div>
+    <section>
+        <div class="container">
+            <div class="item-container">
+                <div class="img-container">
+                    <img src="./images/session1.jpg" alt="Event image">
                 </div>
-                <button class="action">Register</button>
-            </div>
-        </div>
 
-        <div class="item-container">
-            <div class="img-container">
-                <img src="./images/session2.jpg" alt="Event image">
-            </div>
+                <div class="body-container">
+                    <div class="overlay"></div>
 
-            <div class="body-container">
-                <div class="overlay"></div>
+                    <div class="event-info">
+                        <p class="title">Talk Show</p>
+                        <div class="separator"></div>
+                        <p class="info">VIT Bhopal, Madhey Pradesh</p>
+                        <p class="price">Rs 75</p>
 
-                <div class="event-info">
-                    <p class="title">Hands on workshop</p>
-                    <div class="separator"></div>
-                    <p class="info">VIT Bhopal, Madhey Pradesh</p>
-                    <p class="price">Rs 75</p>
+                        <div class="additional-info">
+                            <p class="info">
+                                <i class="fas fa-map-marker-alt"></i>
+                                Auditorium, VIT Bhopal
+                            </p>
+                            <p class="info">
+                                <i class="far fa-calendar-alt"></i>
+                                27 April 2023, 11:00 AM - 1:00 PM
+                            </p>
 
-                    <div class="additional-info">
-                        <p class="info">
-                            <i class="fas fa-map-marker-alt"></i>
-                            Auditorium, VIT Bhopal
-                        </p>
-                        <p class="info">
-                            <i class="far fa-calendar-alt"></i>
-                            27 April 2023, 2:00 PM - 5:30 PM
-                        </p>
+                            <p class="info-description">
+                                A sit-down interactive dialogue session with <b>Smith Gonslaves</b>, a renowned AI-based
+                                Cyber
+                                Security expert with prior entrepreneurial experience with his own company
+                                CYBERSMITHSECURE
+                                PRIVATE
+                                LIMITED.
+                            </p>
 
-                        <p class="info-description">
-                            Project on defensive and offensive security of enterprises using GANs.
-                        </p>
+                        </div>
                     </div>
+
                 </div>
-                <button class="action">Register</button>
             </div>
+
+            <div class="item-container">
+                <div class="img-container">
+                    <img src="./images/session2.jpg" alt="Event image">
+                </div>
+
+                <div class="body-container">
+                    <div class="overlay"></div>
+
+                    <div class="event-info">
+                        <p class="title">Hands on workshop</p>
+                        <div class="separator"></div>
+                        <p class="info">VIT Bhopal, Madhey Pradesh</p>
+                        <p class="price">Rs 75</p>
+
+                        <div class="additional-info">
+                            <p class="info">
+                                <i class="fas fa-map-marker-alt"></i>
+                                Auditorium, VIT Bhopal
+                            </p>
+                            <p class="info">
+                                <i class="far fa-calendar-alt"></i>
+                                27 April 2023, 2:00 PM - 5:30 PM
+                            </p>
+
+                            <p class="info-description">
+                                Project on defensive and offensive security of enterprises using GANs.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
+    </section>
+    <div class="button">
+        <button class="action">Register</button>
     </div>
-
 </body>
 
 </html>
