--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </section>
     <div class="button">
-        <button class="action">Register</button>
+        <button class="action">Register Now!!!</button>
     </div>
 </body>
 
